--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,20 @@
 {
   "env": {
-      "browser": true,
-      "es2021": true
+    "browser": true,
+    "node": true,
+    "jest": true,
+    "es6": true
   },
   "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/eslint-recommended",
-      "plugin:@typescript-eslint/recommended"
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   },
-  "plugins": [
-      "@typescript-eslint"
-  ],
-  "rules": {
-  }
+  "plugins": ["@typescript-eslint", "eslint-plugin-tailwindcss"],
+  "rules": {}
 }
