--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,20 @@
 {
   "name": "@violetit/server",
   "version": "0.0.1",
-  "main": "dist/index.js"
+  "main": "dist/index.js",
+  "dependencies": {
+    "@koa/cors": "^4.0.0",
+    "@koa/router": "^12.0.0",
+    "dotenv": "^16.0.3",
+    "koa": "^2.14.1",
+    "koa-bodyparser": "^4.3.0",
+    "mongoose": "^6.8.2"
+  },
+  "devDependencies": {
+    "@types/koa": "^2.13.5",
+    "@types/koa-bodyparser": "^4.3.10",
+    "@types/koa-router": "^7.4.4",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^18.11.18"
+  }
 }
