--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,9 +5,14 @@
   "dependencies": {
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
+    "graphql-relay": "^0.10.0",
+    "jsonwebtoken": "^9.0.0",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
+    "koa-graphql": "^0.12.0",
     "mongoose": "^6.8.2"
   },
   "devDependencies": {
