--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,7 @@
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
     "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
+    "dotenv-safe": "^8.2.0",
     "graphql": "^16.6.0",
     "graphql-relay": "^0.10.0",
     "jsonwebtoken": "^9.0.0",
@@ -16,9 +16,11 @@
     "mongoose": "^6.8.2"
   },
   "devDependencies": {
+    "@types/dotenv-safe": "^8.1.2",
     "@types/koa": "^2.13.5",
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-router": "^7.4.4",
+    "@types/koa__cors": "^3.3.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.18"
   }
