--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "main": "dist/index.js",
   "dependencies": {
+    "@entria/graphql-mongo-helpers": "^1.1.2",
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "dotenv-safe": "^8.2.0",
     "graphql": "^16.6.0",
     "graphql-relay": "^0.10.0",
@@ -16,6 +17,7 @@
     "mongoose": "^6.8.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/dotenv-safe": "^8.1.2",
     "@types/koa": "^2.13.5",
     "@types/koa-bodyparser": "^4.3.10",
