--- a/package.json
+++ b/package.json
@@ -9,20 +9,37 @@
     ]
   },
   "scripts": {
-    "prepare": "husky install"
+    "jest": "jest",
+    "test": "jest --maxWorkers=50%"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.3.0",
-    "@commitlint/config-conventional": "^17.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@commitlint/cli": "^17.4.0",
+    "@commitlint/config-conventional": "^17.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "jest-environment-node": "^29.3.1",
+    "babel-jest": "^29.3.1",
     "concurrently": "^7.6.0",
     "eslint": "^8.31.0",
-    "eslint-plugin-tailwindcss": "^3.8.0",
-    "husky": "^8.0.2",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-relay": "^1.8.3",
+    "husky": "^8.0.3",
     "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.2",
     "typescript": "^4.9.4"
   }
 }
