--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,7 +15,6 @@
     "@koa/router": "^12.0.0",
     "bcryptjs": "^2.4.3",
     "dataloader": "^2.1.0",
-    "dotenv-safe": "^8.2.0",
     "graphql": "^16.6.0",
     "graphql-relay": "^0.10.0",
     "jsonwebtoken": "^9.0.0",
@@ -26,13 +25,15 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/dotenv-safe": "^8.1.2",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/koa": "^2.13.5",
     "@types/koa-bodyparser": "^4.3.10",
-    "@types/koa-router": "^7.4.4",
+    "@types/koa-graphql": "^0.8.7",
     "@types/koa__cors": "^3.3.0",
+    "@types/koa__router": "^12.0.0",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^18.11.18"
+    "dotenv-safe": "^8.2.0",
+    "mongodb-memory-server": "^8.11.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
