--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/dotenv-safe": "^8.1.2",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/koa": "^2.13.5",
     "@types/koa-bodyparser": "^4.3.10",
