feat(ui): create voteButton ui component

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -5,7 +5,7 @@
     "resolveJsonModule": true,
     "moduleResolution": "node",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "module": "ESNext",
+    "module": "ESNext"
   },
   "include": ["./src"],
   "exclude": ["node_modules"]
