--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@violetit/ui",
   "version": "0.0.1",
-  "main": "src/index.ts"
+  "main": "src/index.ts",
+  "dependencies": {
+    "react-icons": "^4.7.1"
+  }
 }
