--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     ]
   },
   "scripts": {
-    "jest": "jest",
-    "test": "jest --maxWorkers=50%"
+    "test": "jest",
+    "test:watch": "jest --maxWorkers=25%",
+    "test:ci": "jest --runInBand",
+    "dev:all": "concurrently \"yarn dev:server\" \"yarn dev:web\"",
+    "dev:server": "yarn workspace @violetit/server start:dev",
+    "dev:web": "yarn workspace @violetit/web start:dev"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.5",
-    "@types/node": "^18.11.18",
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.4.0",
     "@commitlint/config-conventional": "^17.4.0",
+    "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
-    "jest-environment-node": "^29.3.1",
-    "babel-jest": "^29.3.1",
     "concurrently": "^7.6.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
@@ -37,7 +38,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-relay": "^1.8.3",
     "husky": "^8.0.3",
-    "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.2",
     "typescript": "^4.9.4"
