feat: test functions

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -12,11 +12,5 @@
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo"
   },
   "include": ["src/**/*", "./package.json"],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "src/**/*.test.ts",
-    "test/**/*",
-    "src/**/fixtures/*.ts"
-  ]
+  "exclude": ["node_modules", "dist", "src/**/*.test.ts", "test/**/*", "src/**/fixtures/*.ts"]
 }
