--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,6 +12,7 @@
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -34,7 +35,7 @@
     "@types/relay-test-utils": "^14.1.0",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
-    "babel-plugin-relay": "^14.1.0",
+    "babel-plugin-relay": "^15.0.0",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "postcss": "^8.4.20",
