feat: config files

--- a/.eslintignore
+++ b/.eslintignore
@@ -3,3 +3,25 @@ node_modules/
 **/build/
 **/dist/
 **/jest.*.js
+**/__snapshots__/**
+**/build/**
+**/dist/**
+**/deploy/**
+**/lib/**
+**/node_modules/**
+**/__generated__/**
+**/public/**
+
+/coverage/**
+/docs/**
+/jsdoc/**
+/templates/**
+/tests/bench/**
+/tests/fixtures/**
+/tests/performance/**
+/tmp/**
+**/cdk.out/**
+
+/lib/rules/utils/unicode/is-combining-character.js
+test.js
+!.eslintrc.js
