refactor: add /apps to config files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,7 +62,7 @@
     "import/resolver": {
       "node": true,
       "typescript": {
-        "project": ["packages/*/tsconfig.json"]
+        "project": ["packages/*/tsconfig.json", "apps/*/tsconfig.json"]
       }
     }
   }
