--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -4,14 +4,16 @@
     "jsx": "react-jsx",
     "resolveJsonModule": true,
     "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "baseUrl": "./src",
     "paths": {
-      "@/*": ["./*"],
-      "@/tests/*": ["./../test"]
+      "src/*": ["./*"],
+      "src/tests/*": ["./../test"]
     }
   },
-  "include": ["./src"],
-  "exclude": ["node_modules", "./src/**/*.test.tsx", "./test"]
+  "include": ["src"],
+  "exclude": ["node_modules", "./src/**/*.test.tsx", "./test"],
+  "types": ["node"]
 }
