--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.2",
     "prettier-plugin-tailwindcss": "^0.2.4",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0"
   }
 }
