--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "copy-env": "cp .env.example .env"
   },
   "dependencies": {
+    "babel-plugin-relay": "^15.0.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
