--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,7 +24,8 @@
     "koa-bodyparser": "^4.3.0",
     "koa-graphql": "^0.12.0",
     "mongodb-memory-server": "^8.11.4",
-    "mongoose": "^6.8.2"
+    "mongoose": "^6.8.2",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -41,6 +42,7 @@
     "dotenv-safe": "^8.2.0",
     "jest": "28.1.2",
     "jest-environment-node": "28.1.2",
+    "supertest": "^6.3.3",
     "ts-jest": "28.0.5",
     "ts-node-dev": "^2.0.0"
   }
