--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --maxWorkers=25%",
-    "test:ci": "jest --runInBand",
-    "copy-envs": "yarn workspace @violetit/server copy-env && yarn workspace @violetit/web copy-env",
-    "dev:all": "concurrently \"yarn dev:server\" \"yarn dev:web\"",
-    "dev:server": "yarn workspace @violetit/server start:dev",
-    "dev:web": "yarn workspace @violetit/web start:dev"
+    "test:server": "yarn workspace @violetit/server test",
+    "copy-envs": "turbo run copy-env",
+    "dev:all": "turbo run start:dev --parallel",
+    "dev:web": "yarn workspace @violetit/web start:dev",
+    "dev:server": "yarn workspace @violetit/server start:dev"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -27,6 +27,7 @@
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "babel-jest": "^29.5.0",
     "concurrently": "^7.6.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
@@ -40,11 +41,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-relay": "^1.8.3",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.2",
     "prettier-plugin-tailwindcss": "^0.2.4",
-    "typescript": "^4.9.4",
-    "babel-jest": "^29.5.0",
-    "jest": "^29.5.0"
+    "turbo": "^1.8.5",
+    "typescript": "^4.9.4"
   }
 }
