--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,7 @@
       "outputs": ["coverage/**"],
       "dependsOn": []
     },
-    "start:prod": {
+    "start": {
       "cache": false
     },
     "start:dev": {
