--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@entria/graphql-mongo-helpers": "^1.1.2",
+    "@entria/graphql-mongoose-loader": "^4.4.0",
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
     "bcryptjs": "^2.4.3",
