--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "react-relay": "^14.1.0",
     "react-router-dom": "^6.6.1",
     "relay-runtime": "^14.1.0",
+    "use-debounce": "^9.0.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -39,7 +40,6 @@
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "dotenv": "^16.0.3",
-    "formik": "^2.2.9",
     "postcss": "^8.4.20",
     "relay-compiler": "^14.1.0",
     "relay-compiler-language-typescript": "^15.0.1",
@@ -48,7 +48,6 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "vite": "^4.0.0",
-    "vite-plugin-relay": "^2.0.0",
-    "yup": "^0.32.11"
+    "vite-plugin-relay": "^2.0.0"
   }
 }
