--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -6,14 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "relay": "relay-compiler",
-    "copy-env": "cp .env.example .env"
+    "lint": "next lint"
   },
   "dependencies": {
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
-    "next": "13.2.4",
+    "next": "13.3.0",
     "next-themes": "^0.2.1",
     "notistack": "^3.0.1",
     "react": "18.2.0",
@@ -31,18 +29,18 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
-    "@types/react-dom": "18.0.11",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
     "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-relay": "^14.1.3",
     "@types/relay-runtime": "^14.1.10",
     "@types/relay-test-utils": "^14.1.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
+    "autoprefixer": "10.4.14",
+    "postcss": "8.4.21",
     "relay-compiler": "^15.0.0",
     "relay-config": "^12.0.1",
-    "tailwindcss": "^3.3.1",
-    "typescript": "5.0.3"
+    "tailwindcss": "3.3.1",
+    "typescript": "5.0.4"
   }
 }
