--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -23,12 +23,17 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.8",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.13",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "next-router-mock": "^0.9.3",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
     "typescript": "5.0.4"
