--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "yarn relay && next build",
     "start": "next start",
     "lint": "next lint",
     "relay": "relay-compiler",
+    "start:dev": "yarn dev",
     "copy-env": "cp .env.example .env"
   },
   "dependencies": {
@@ -15,8 +16,18 @@
     "next": "13.3.0",
     "next-themes": "^0.2.1",
     "nookies": "^2.5.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
+    "formik": "^2.2.9",
+    "notistack": "^3.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-infinite-scroller": "^1.2.6",
+    "react-relay": "^14.0.0",
+    "relay-runtime": "^14.0.0",
+    "use-debounce": "^9.0.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -26,9 +37,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/react-infinite-scroller": "^1.2.3",
+    "@types/react-relay": "^14.1.3",
+    "@types/relay-runtime": "^14.1.6",
+    "@types/relay-test-utils": "^14.0.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "relay-compiler": "^14.0.0",
+    "relay-config": "^12.0.1",
+    "relay-test-utils": "^14.0.0",
     "autoprefixer": "^10.4.13",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
