--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,19 +12,9 @@
   },
   "dependencies": {
     "babel-plugin-relay": "^15.0.0",
-    "clsx": "^1.2.1",
-    "date-fns": "^2.29.3",
-    "formik": "^2.2.9",
-    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "react-infinite-scroller": "^1.2.6",
-    "react-relay": "^14.1.0",
-    "react-router-dom": "^6.6.1",
-    "relay-runtime": "^14.1.0",
-    "use-debounce": "^9.0.4",
-    "yup": "^0.32.11"
+    "react-router-dom": "^6.6.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -33,20 +23,12 @@
     "@tailwindcss/typography": "^0.5.8",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@types/react-infinite-scroller": "^1.2.3",
-    "@types/react-relay": "^14.1.3",
-    "@types/relay-runtime": "^14.1.6",
-    "@types/relay-test-utils": "^14.1.0",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "dotenv": "^16.0.3",
     "postcss": "^8.4.20",
-    "relay-compiler": "^14.1.0",
     "relay-compiler-language-typescript": "^15.0.1",
-    "relay-config": "^12.0.1",
-    "relay-test-utils": "^14.1.0",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4",
     "vite": "^4.0.0",
     "vite-plugin-relay": "^2.0.0"
   }
